fixed page spacing issue?

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
 	margin: 0% 15%;
 	padding: 2% 10%;
 	background-color: white;
-	height: 400px;
+	min-height: 100vh;
 }
 
 #form {
